<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>octomap_depth_mapping</name>
  <version>0.0.0</version>
  <description>Octomap mapping from depth images</description>
  <maintainer email="berkealgul@gmail.com">berke</maintainer>
  <license>GPL version 3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>octomap</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_srvs</depend>
    <depend>message_filters</depend>
  </export>
</package>
